[project]
name = "martle"
dynamic = ["version"]
description = "marimo turtle graphics"
keywords = ["open source", "marimo", "turtle graphis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
dependencies = []

[project.urls]
Repository = "https://github.com/gvwilson/martle"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "marimo>=0.19.9",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/martle"]

[tool.hatch.version]
path = "src/martle/__init__.py"
